--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,24 +1,11 @@
 {
-  "files": [
-    "src/index.ts",
-    "node_modules/@types/jest/index.d.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
+  "extends": "./tsconfig.base.json",
+  "include": ["src/index.ts"],
   "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "@lxjx/hooks": ["src/index.ts"]
-    },
-    "target": "es5",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "jsx": "react",
-    "lib": ["dom", "esnext"],
-    "sourceMap": true
+    "declaration": true,
+    "declarationDir": "./esm",
+    "outDir": "./esm",
+    "declarationMap": true,
+    "skipLibCheck": true /* 暂时跳过检测, vfile包冲突 */
   }
 }
