--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
   "files": [
     "src/index.ts",
+    "src/cacheMiddleware.ts",
     "node_modules/@types/jest/index.d.ts"
   ],
   "include": ["types"],
